# celery-types

./: .deepsource.toml  .gitignore  .ignore  .pre-commit-config.yaml  README.md  amqp-stubs  billiard-stubs  celery-stubs  django_celery_results-stubs  ephem-stubs  foo.py  kombu-stubs  mypy.ini  package.json  pyproject.toml  pyrightconfig.json  stubtest-allowlist-kombu.txt  tox.ini  vine-stubs
.circleci/: config.yml
.github/workflows/: publish-to-test-pypi.yml  test.yml
amqp-stubs/: __init__.pyi  abstract_channel.pyi  basic_message.pyi  channel.pyi  connection.pyi  exceptions.pyi  method_framing.pyi  platform.pyi  protocol.pyi  sasl.pyi  serialization.pyi  spec.pyi  transport.pyi  utils.pyi
billiard-stubs/: __init__.pyi  allowlist.txt  common.pyi  compat.pyi  connection.pyi  context.pyi  einfo.pyi  exceptions.pyi  forkserver.pyi  heap.pyi  managers.pyi  pool.pyi  popen_fork.pyi  popen_forkserver.pyi  popen_spawn_posix.pyi  popen_spawn_win32.pyi  process.pyi  queues.pyi  reduction.pyi  resource_sharer.pyi  semaphore_tracker.pyi  sharedctypes.pyi  spawn.pyi  synchronize.pyi  util.pyi
billiard-stubs/dummy/: __init__.pyi  connection.pyi
celery-stubs/: __init__.pyi  __main__.pyi  _state.pyi  allowlist.txt  beat.pyi  bootsteps.pyi  canvas.pyi  exceptions.pyi  execute.pyi  local.pyi  messaging.pyi  platforms.pyi  result.pyi  schedules.pyi  signals.pyi  states.pyi
celery-stubs/app/: __init__.pyi  amqp.pyi  annotations.pyi  autoretry.pyi  backends.pyi  base.pyi  builtins.pyi  control.pyi  defaults.pyi  events.pyi  log.pyi  registry.pyi  routes.pyi  task.pyi  trace.pyi  utils.pyi
celery-stubs/apps/: beat.pyi  multi.pyi  worker.pyi
celery-stubs/backends/: arangodb.pyi  asynchronous.pyi  azureblockblob.pyi  base.pyi  cache.pyi  cassandra.pyi  consul.pyi  cosmosdbsql.pyi  couchbase.pyi  couchdb.pyi  dynamodb.pyi  elasticsearch.pyi  filesystem.pyi  gcs.pyi  mongodb.pyi  redis.pyi  rpc.pyi  s3.pyi
celery-stubs/backends/database/: __init__.pyi  models.pyi  session.pyi
celery-stubs/concurrency/: __init__.pyi  asynpool.pyi  base.pyi  eventlet.pyi  gevent.pyi  prefork.pyi  solo.pyi
celery-stubs/contrib/: abortable.pyi  migrate.pyi  pytest.pyi  rdb.pyi  sphinx.pyi
celery-stubs/contrib/django/: task.pyi
celery-stubs/contrib/testing/: app.pyi  manager.pyi  mocks.pyi  worker.pyi
celery-stubs/events/: __init__.pyi  cursesmon.pyi  dispatcher.pyi  dumper.pyi  event.pyi  receiver.pyi  snapshot.pyi  state.pyi
celery-stubs/fixups/: __init__.pyi  django.pyi
celery-stubs/loaders/: __init__.pyi  app.pyi  base.pyi  default.pyi
celery-stubs/security/: __init__.pyi  certificate.pyi  key.pyi  serialization.pyi  utils.pyi
celery-stubs/utils/: __init__.pyi  abstract.pyi  annotations.pyi  collections.pyi  debug.pyi  deprecated.pyi  functional.pyi  graph.pyi  imports.pyi  iso8601.pyi  log.pyi  nodenames.pyi  objects.pyi  quorum_queues.pyi  saferepr.pyi  serialization.pyi  static.pyi  sysinfo.pyi  term.pyi  text.pyi  threads.pyi  time.pyi  timer2.pyi
celery-stubs/utils/dispatch/: __init__.pyi  signal.pyi
celery-stubs/worker/: __init__.pyi  autoscale.pyi  components.pyi  control.pyi  heartbeat.pyi  loops.pyi  pidbox.pyi  request.pyi  state.pyi  strategy.pyi  worker.pyi
celery-stubs/worker/consumer/: __init__.pyi  agent.pyi  connection.pyi  consumer.pyi  control.pyi  delayed_delivery.pyi  events.pyi  gossip.pyi  heart.pyi  mingle.pyi  tasks.pyi
django_celery_results-stubs/: managers.pyi  models.pyi
kombu-stubs/: __init__.pyi  abstract.pyi  allowlist.txt  clocks.pyi  common.pyi  compat.pyi  compression.pyi  connection.pyi  entity.pyi  exceptions.pyi  log.pyi  matcher.pyi  message.pyi  messaging.pyi  mixins.pyi  pidbox.pyi  pools.pyi  resource.pyi  serialization.pyi  simple.pyi
kombu-stubs/asynchronous/: __init__.pyi  aws.pyi  debug.pyi  hub.pyi  semaphore.pyi  timer.pyi
kombu-stubs/asynchronous/aws/: __init__.pyi  connection.pyi  ext.pyi
kombu-stubs/asynchronous/aws/sqs/: __init__.pyi  connection.pyi  ext.pyi  message.pyi  queue.pyi
kombu-stubs/asynchronous/http/: __init__.pyi  base.pyi  curl.pyi
kombu-stubs/transport/: SLMQ.pyi  SQS.pyi  __init__.pyi  azureservicebus.pyi  azurestoragequeues.pyi  base.pyi  confluentkafka.pyi  consul.pyi  etcd.pyi  filesystem.pyi  gcpubsub.pyi  librabbitmq.pyi  memory.pyi  mongodb.pyi  native_delayed_delivery.pyi  pyamqp.pyi  pyro.pyi  qpid.pyi  redis.pyi  zookeeper.pyi
kombu-stubs/transport/sqlalchemy/: __init__.pyi  models.pyi
kombu-stubs/transport/virtual/: __init__.pyi  base.pyi  exchange.pyi
kombu-stubs/utils/: __init__.pyi  amq_manager.pyi  collections.pyi  compat.pyi  debug.pyi  div.pyi  encoding.pyi  encodings.pyi  eventio.pyi  functional.pyi  imports.pyi  json.pyi  limits.pyi  objects.pyi  scheduling.pyi  text.pyi  time.pyi  url.pyi  uuid.pyi
s/: build  bump-version  lint  shell
tests/: test_celery.py
typings/: amqp  billiard  celery  django_celery_results  ephem  kombu  vine
typings/celery/: __init__.pyi  _state.pyi  canvas.pyi  exceptions.pyi  states.pyi
typings/celery/app/: __init__.pyi  base.pyi  control.pyi  log.pyi  registry.pyi
typings/celery/utils/: collections.pyi  log.pyi  objects.pyi  threads.pyi
typings/celery/utils/dispatch/: signal.pyi
typings/celery/worker/: request.pyi  worker.pyi
typings/django_celery_results/: managers.pyi  models.pyi
typings/kombu/: entity.pyi  message.pyi
typings/kombu/transport/: base.pyi
typings/kombu/utils/: uuid.pyi
vine-stubs/: __init__.pyi  abstract.pyi  funtools.pyi  promises.pyi  synchronization.pyi  utils.pyi
