[tool.poetry]
name = "celery-types"
version = "0.23.0"
description = "Type stubs for Celery and its related packages"
repository = "https://github.com/sbdchd/celery-types"
readme = "README.md"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "Apache-2.0"
keywords = [
    "celery",
    "kombu",
    "vine",
    "amqp",
    "billiard",
    "django_celery_results",
    "types",
    "mypy",
    "stubs",
]

packages = [
    { include = "amqp-stubs" },
    { include = "billiard-stubs" },
    { include = "celery-stubs" },
    { include = "django_celery_results-stubs" },
    { include = "ephem-stubs" },
    { include = "kombu-stubs" },
    { include = "vine-stubs" },
]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.15.0"


[tool.poetry.group.dev.dependencies]
celery = "^5.0"
black = ">=25.11"
django-types = "^0.3.1"
django = "^3.1"
ruff = ">=0.14.9"
mypy = ">=1.19.0"
pyright = ">=1.1.407"
toml-cli = "^0.5.0"

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["typings/django_celery_results*"]
reportPrivateUsage = false
reportMissingModuleSource = false
reportIncompatibleMethodOverride = false
reportTypedDictNotRequiredAccess = false
reportUnusedFunction = false

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "TID252",
    "I001",
    "T20",
    "C4",
    "UP",
    "N",
    "BLE",
    "B",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "RUF",
]
# src = ["recipeyak"]
ignore = [
    "E501",   # line length is handled by black
    "ARG001", # pytest fixtures mess with this
    "ARG002", # sometimes parent classes require params
    "N806",   # django migrations violate this a lot
    "B008",   # type.Argument violates this
    "N815",   # we mix and match casing in serializers
    "ARG005", # monkey patching false positive with *args, and **kwargs
    "N805",   # false positive with pydantic
    "N802",   # DRF serializers mess with this
    "RET505", # if, elif, else are fine with returns
    "RET507", # if, elif, else with continue is also fine
    "RET508", # if, elif, else with break is also fine

    # okay because we're doing hacky things for our runtime tests
    "T201", # we use print for testing
    "B905", # allow zip without strict
    "B018", # useless expressions useful for type checking
    "B904", # allow bad except clauses
    "N803", # some APIs have weird names
    "N818", # some exceptions have bad names
    "N801", # some class names have bad names
]
unfixable = [
    "ERA001",
] # we want to check ourselves before we delete commented out code.


# [tool.ruff.isort]
# known-third-party = ["django"]
# known-first-party = ["recipeyak"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
