[project]
name = "celery-types"
version = "0.24.0"
description = "Type stubs for Celery and its related packages"
authors = [{ name = "Steve Dignam", email = "steve@dignam.xyz" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "celery",
    "kombu",
    "vine",
    "amqp",
    "billiard",
    "django_celery_results",
    "types",
    "mypy",
    "stubs",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Stubs Only",
    "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.15.0,<5"]

[project.urls]
Repository = "https://github.com/sbdchd/celery-types"

[dependency-groups]
dev = [
    "celery>=5.0,<6",
    "django-types>=0.3.1,<0.4",
    "django>=3.1,<4",
    "ruff>=0.14.9",
    "mypy>=1.19.0",
    "basedpyright>=1.36.1",
    "prek>=0.2.23",
]


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = [
    "amqp-stubs",
    "billiard-stubs",
    "celery-stubs",
    "django_celery_results-stubs",
    "ephem-stubs",
    "kombu-stubs",
    "vine-stubs",
]
module-root = ""

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.10"

reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedParameter = false
reportUnusedFunction = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false


[tool.mypy]
show_column_numbers = true
pretty = false

mypy_path = "./typings"

show_error_codes = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # conflict with ruff formatting
    "ANN401", # allow Any in type annotations
    "D",      # docstring style is not important for stubs
    "A001",   # shadowing builtins is okay in stubs
    "A002",   # common name clashes are okay in stubs
    "A004",   # shadowing names from typing is okay in stubs
    "TD003",  # missing issue link for
    "FIX002", # allow todo comments

    "E501",   # line length is handled by black
    "ARG001", # pytest fixtures mess with this
    "ARG002", # sometimes parent classes require params
    "N806",   # django migrations violate this a lot
    "B008",   # type.Argument violates this
    "N815",   # we mix and match casing in serializers
    "ARG005", # monkey patching false positive with *args, and **kwargs
    "N805",   # false positive with pydantic
    "N802",   # DRF serializers mess with this
    "RET505", # if, elif, else are fine with returns
    "RET507", # if, elif, else with continue is also fine
    "RET508", # if, elif, else with break is also fine

    # okay because we're doing hacky things for our runtime tests
    "T201", # we use print for testing
    "B905", # allow zip without strict
    "B018", # useless expressions useful for type checking
    "B904", # allow bad except clauses
    "N803", # some APIs have weird names
    "N818", # some exceptions have bad names
    "N801", # some class names have bad names
]
unfixable = [
    "ERA001",
] # we want to check ourselves before we delete commented out code.


[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
